--- a/css/style.css
+++ b/css/style.css
@@ -1607,3 +1607,16 @@ left:0px;
   width: 500px;
   
 }
+
+#auspiciadores {
+
+  padding: 40px 0;
+ 
+
+ 
+    color: #666;
+    
+    text-align: center;
+  
+ 
+}
