--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a@font-face {
     top: 100%;
     left: 15px;
     border-top: 10px solid black;
-    border-top-color: #fff;
+    border-top-color: ;
     border-top-color: #8f4987;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
@@ -29,7 +29,7 @@ a@font-face {
     top: 100%;
     right: 15px;
     border-top: 10px solid black;
-    border-top-color: #fff;
+    border-top-color: ;
     border-top-color: #8f4987;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
