--- a/css/style.css
+++ b/css/style.css
@@ -1672,3 +1672,19 @@ left:0px;
   color: #fff;
   outline: none !important;
 }
+#floating-panel-title {
+    position: absolute;
+    top: 10px;
+    left: 35%;
+    z-index: 5;
+    background: rgba(143, 73, 135, 0.95);
+    padding: 1px;
+    border: 1px solid #999;
+    text-align: center;
+    line-height: 10px;
+    padding-left: 10px;
+    font-weight:bold;
+    height: 50px;
+
+}
+
