--- a/css/style.css
+++ b/css/style.css
@@ -1676,6 +1676,7 @@ left:0px;
     position: absolute;
     top: 10px;
     left: 35%;
+    
     z-index: 5;
     background: rgba(143, 73, 135, 0.95);
     padding: 1px;
@@ -1685,6 +1686,8 @@ left:0px;
     padding-left: 10px;
     font-weight:bold;
     height: 50px;
-
+}
+#floating-panel-title .h1 {
+  font-size:4vw;
 }
 
