--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -305,7 +305,7 @@ th {
 
   .table-bordered th,
   .table-bordered td {
-    border: 1px solid #ddd !important;
+    border: 1px solid #465b6e !important;
   }
 }
 @font-face {
@@ -1445,7 +1445,7 @@ img {
   padding: 4px;
   line-height: 1.42857;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
@@ -2856,11 +2856,11 @@ th {
   padding: 8px;
   line-height: 1.42857;
   vertical-align: top;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #465b6e;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid #465b6e;
 }
 .table > caption + thead > tr:first-child > th,
 .table > caption + thead > tr:first-child > td,
@@ -2871,7 +2871,7 @@ th {
   border-top: 0;
 }
 .table > tbody + tbody {
-  border-top: 2px solid #ddd;
+  border-top: 2px solid #465b6e;
 }
 .table .table {
   background-color: #fff;
@@ -2887,7 +2887,7 @@ th {
 }
 
 .table-bordered {
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td,
@@ -2895,7 +2895,7 @@ th {
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > th,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
@@ -3023,7 +3023,7 @@ table th[class*="col-"] {
     margin-bottom: 15px;
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    border: 1px solid #ddd;
+    border: 1px solid #465b6e;
   }
   .table-responsive > .table {
     margin-bottom: 0;
@@ -4535,7 +4535,7 @@ tbody.collapse.in {
 }
 
 .nav-tabs {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #465b6e;
 }
 .nav-tabs > li {
   float: left;
@@ -4548,12 +4548,12 @@ tbody.collapse.in {
   border-radius: 4px 4px 0 0;
 }
 .nav-tabs > li > a:hover {
-  border-color: #eeeeee #eeeeee #ddd;
+  border-color: #eeeeee #eeeeee #465b6e;
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   color: #555555;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
   border-bottom-color: transparent;
   cursor: default;
 }
@@ -4616,11 +4616,11 @@ tbody.collapse.in {
 .nav-tabs.nav-justified > .active > a:hover,
 .nav-tabs-justified > .active > a:focus,
 .nav-tabs.nav-justified > .active > a:focus {
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
 }
 @media (min-width: 768px) {
   .nav-tabs-justified > li > a, .nav-tabs.nav-justified > li > a {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #465b6e;
     border-radius: 4px 4px 0 0;
   }
   .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
@@ -5035,10 +5035,10 @@ tbody.collapse.in {
   background-color: transparent;
 }
 .navbar-default .navbar-toggle {
-  border-color: #ddd;
+  border-color: #465b6e;
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-  background-color: #ddd;
+  background-color: #465b6e;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #transparent;
@@ -5206,7 +5206,7 @@ tbody.collapse.in {
   text-decoration: none;
   color: #337ab7;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
   margin-left: -1px;
 }
 .pagination > li:first-child > a,
@@ -5226,7 +5226,7 @@ tbody.collapse.in {
   z-index: 3;
   color: #23527c;
   background-color: #eeeeee;
-  border-color: #ddd;
+  border-color: #465b6e;
 }
 .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus,
 .pagination > .active > span,
@@ -5246,7 +5246,7 @@ tbody.collapse.in {
 .pagination > .disabled > a:focus {
   color: #777777;
   background-color: #fff;
-  border-color: #ddd;
+  border-color: #465b6e;
   cursor: not-allowed;
 }
 
@@ -5305,7 +5305,7 @@ tbody.collapse.in {
   display: inline-block;
   padding: 5px 14px;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
   border-radius: 15px;
 }
 .pager li > a:hover,
@@ -5489,7 +5489,7 @@ a.badge:hover, a.badge:focus {
   margin-bottom: 20px;
   line-height: 1.42857;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
@@ -5758,7 +5758,7 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #465b6e;
 }
 .list-group-item:first-child {
   border-top-right-radius: 4px;
@@ -5990,7 +5990,7 @@ button.list-group-item-danger.active:focus {
 .panel-footer {
   padding: 10px 15px;
   background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #465b6e;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
@@ -6108,7 +6108,7 @@ button.list-group-item-danger.active:focus {
 .panel > .panel-body + .table-responsive,
 .panel > .table + .panel-body,
 .panel > .table-responsive + .panel-body {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #465b6e;
 }
 .panel > .table > tbody:first-child > tr:first-child th,
 .panel > .table > tbody:first-child > tr:first-child td {
@@ -6186,32 +6186,32 @@ button.list-group-item-danger.active:focus {
 }
 .panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #465b6e;
 }
 .panel-group .panel-footer {
   border-top: 0;
 }
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #465b6e;
 }
 
 .panel-default {
-  border-color: #ddd;
+  border-color: #465b6e;
 }
 .panel-default > .panel-heading {
   color: #333333;
   background-color: #f5f5f5;
-  border-color: #ddd;
+  border-color: #465b6e;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #ddd;
+  border-top-color: #465b6e;
 }
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
   background-color: #333333;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #ddd;
+  border-bottom-color: #465b6e;
 }
 
 .panel-primary {
@@ -6349,7 +6349,7 @@ button.list-group-item-danger.active:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 .well blockquote {
-  border-color: #ddd;
+  border-color: #465b6e;
   border-color: rgba(0, 0, 0, 0.15);
 }
 
