--- a/css/style.css
+++ b/css/style.css
@@ -1345,7 +1345,7 @@ position: absolute;
 }
 .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus {
   box-shadow: none;
-  background: #8F4987;
+  background: #deac39;
 }
 .btn:hover, .btn:active, .btn:focus {
   
@@ -1545,7 +1545,7 @@ position: absolute;
   right: 0;
   bottom: 0;
   
-  background: rgba(143, 73, 135, 0.95);
+ */ background: rgba(143, 73, 135, 0.95);
 }
 
 #fh5co-radios .radios{
@@ -1726,3 +1726,10 @@ left:0px;
 	display:block; 
 	margin:auto;
 }
+
+.swal2-popup .swal2-styled.swal2-confirm {
+    border: 0;
+    border-radius: 0.25em;
+    background-color: #ffffff;
+    color: #fff;
+    font-size: 1.0625em;
