--- a/css/style.css
+++ b/css/style.css
@@ -1806,6 +1806,7 @@ img-replace {
 }
 .bts-popup {
   position: fixed;
+   z-index: 10;
   left: 0;
   top: 0;
   height: 100%;
@@ -1826,11 +1827,12 @@ img-replace {
 }
 
 .bts-popup-container {
+	z-index:10;
   border-radius: 8px;
   padding: 25px 25px;
   position: relative;
-  width: 40%;
-  max-width: 40%;
+  width: 100%;
+  max-width: 100%;
   margin: 4em auto;
   background: #fff;
   border-radius: none; 
@@ -1925,5 +1927,7 @@ img-replace {
     margin: 5em auto;
   }
 }
-	
+
+
+
 /* end pupup */
