--- a/css/style.css
+++ b/css/style.css
@@ -1928,6 +1928,26 @@ img-replace {
   }
 }
 
-
-
 /* end pupup */
+
+.flex-caption {
+  /* width: 50%; */
+  padding: 2%;
+  left: 0;
+  bottom: 0;
+  background: rgba(0,0,0,.5);
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.3);
+  font-size: 14px;
+  line-height: 18px;
+}
+.flexslider1{
+	
+	width: 100%;
+}
+   
+.flexslider1{
+	
+	width: 433px;
+	height: 288px;
+}   
