--- a/css/style.css
+++ b/css/style.css
@@ -1951,3 +1951,71 @@ img-replace {
 	width: 433px;
 	height: 288px;
 }   
+
+   #noticia {
+ 
+   margin: 0px;
+   padding: 0px;
+   display: -webkit-flex;
+   display:         flex;
+   -webkit-flex-flow: row;
+           flex-flow: row;
+   }
+ 
+  #noticia > article {
+   margin: 4px;
+   padding: 5px;
+   border: 1px solid #cccc33;
+   border-radius: 7pt;
+   background: #dddd88;
+   -webkit-flex: 3 1 60%;
+           flex: 3 1 60%;
+   -webkit-order: 2;
+           order: 2;
+   }
+  
+  #noticia > div {
+   margin: 4px;
+   padding: 5px;
+ 
+   border-radius: 7pt;
+ 
+   -webkit-flex: 1 6 20%;
+           flex: 1 6 20%;
+   -webkit-order: 1;
+           order: 1;
+   }
+  
+  #noticia > aside {
+   margin: 4px;
+   padding: 5px;
+   border: 1px solid #8888bb;
+   border-radius: 7pt;
+   background: #ccccff;
+   -webkit-flex: 1 6 20%;
+           flex: 1 6 20%;
+   -webkit-order: 3;
+           order: 3;
+   }
+ 
+ 
+ 
+  /* Too narrow to support three columns */
+  @media all and (max-width: 640px) {
+  
+   #noticia, #page {
+    -webkit-flex-flow: column;
+            flex-flow: column;
+   }
+
+   #noticia > article, #noticia > nav, #noticia > aside {
+    /* Return them to document order */
+    -webkit-order: 0;
+            order: 0;
+   }
+  
+   #noticia > nav, #noticia > aside, header, footer {
+    min-height: 50px;
+    max-height: 50px;
+   }
+  }
